2003-09-18  Jakub Jelinek  <jakub@redhat.com>

	* tst-attr3.c (tf, do_test): Print stack start/end/size and
	guardsize for each thread.

2003-09-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/pthread.h (pthread_getattr_np): Clarify usage.
	* sysdeps/unix/sysv/linux/pthread_attr_setaffinity.c
	(pthread_attr_setaffinity_np): Handle cpuset == NULL.

	* sysdeps/unix/sysv/linux/pthread_attr_getaffinity.c
	(pthread_attr_getaffinity_np): Don't segfault if iattr->cpuset is
	NULL.
	* pthread_getattr_np.c: Set cpuset using pthread_getaffinity_np.
	* pthreadP.h (pthread_getaffinity_np): Add hidden_proto.
	* sysdeps/unix/sysv/linux/pthread_getaffinity.c
	(pthread_getaffinity_np): Add hidden_def.

	* Makefile (tests): Add tst-attr3.
	* tst-attr3.c: New test.

	* sysdeps/i386/Makefile (CFLAGS-tst-align.c): Remove.

2003-09-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/Makefile (CFLAGS-pthread_create.c,
	CFLAGS-tst-align.c): Add -mpreferred-stack-boundary=4.

2003-09-17  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (CFLAGS-tst-align.c): Add $(stack-align-test-flags).
	* tst-align.c: Include tst-stack-align.h.
	(tf, do_test): Use TEST_STACK_ALIGN macro.

2003-09-17  Ulrich Drepper  <drepper@redhat.com>

	* pthread_attr_init.c (__pthread_attr_init_2_0): Remove unused
	variable.

2003-09-16  Ulrich Drepper  <drepper@redhat.com>

	* pthread_getattr_np.c (pthread_getattr_np): Correctly fill in the
	stack-related values for the initial thread.

2003-09-15  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (CFLAGS-pthread_once.c): Add $(uses-callbacks).

2003-09-11  Ulrich Drepper  <drepper@redhat.com>

	* pthread_mutex_lock.c: Minor code rearrangements.

2003-09-05  Roland McGrath  <roland@redhat.com>

	* pthread_create.c (__pthread_pthread_sizeof_descr): Removed.
	Instead, include ../nptl_db/db_info.c to do its magic.
	* pthread_key_create.c (__pthread_pthread_keys_max): Removed.
	(__pthread_pthread_key_2ndlevel_size): Likewise.